[gd_scene load_steps=3 format=3 uid="uid://b2fsn1iqop6vg"]

[ext_resource type="Script" path="res://Cities/city_block_card.gd" id="1_usg6e"]
[ext_resource type="Texture2D" uid="uid://bibocga5a262e" path="res://Cities/city_block_art_placeholder.png" id="2_wq72v"]

[node name="CityBlockCard" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_usg6e")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = -79.0
offset_top = -124.5
offset_right = 79.0
offset_bottom = 124.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer1" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="PreviewTextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer1"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_wq72v")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="StatsLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Stats"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="StatsVBox" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_button_pressed"]
